Fix context separators missing preceding lines if text wrap is enabled

--- a/bin/resources/app/css/ace.css
+++ b/bin/resources/app/css/ace.css
@@ -213,7 +213,12 @@ textarea#source {
 #main .ace-tm .ace_line:not(:first-child) .ace_preproc.ace_section::after,
 #main .ace-tm .ace_line:not(:first-child) .ace_preproc.ace_event::after,
 #main .ace-tm .ace_line:not(:first-child) .ace_preproc.ace_action::after,
-#main .ace-tm .ace_line:not(:first-child) .ace_preproc.ace_target::after {
+#main .ace-tm .ace_line:not(:first-child) .ace_preproc.ace_target::after,
+#main .ace-tm .ace_line_group:not(:first-child) .ace_preproc.ace_define::after,
+#main .ace-tm .ace_line_group:not(:first-child) .ace_preproc.ace_section::after,
+#main .ace-tm .ace_line_group:not(:first-child) .ace_preproc.ace_event::after,
+#main .ace-tm .ace_line_group:not(:first-child) .ace_preproc.ace_action::after,
+#main .ace-tm .ace_line_group:not(:first-child) .ace_preproc.ace_target::after {
     content: "";
     left: -4px;
     /*bottom: -1px;*/
